<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2015 Ben Sechrist
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_padding">

  <TextView
      android:id="@+id/departure_dialog_title"
      style="@style/Base.DialogWindowTitle.AppCompat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:gravity="center_horizontal"
      android:text="@string/dialog_scheduled_departures_title"/>

  <ImageButton
      android:id="@+id/button_favorite_stop"
      style="?android:borderlessButtonStyle"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignParentTop="true"
      android:contentDescription="@string/fav_button_content_desc"
      android:paddingEnd="0dp"
      android:paddingRight="0dp"
      android:paddingTop="0dp"
      android:scaleType="centerCrop"
      android:src="@drawable/ic_action_star_empty"/>

  <TextView
      android:id="@+id/stop_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/departure_dialog_title"
      android:gravity="center_horizontal"
      android:textSize="@dimen/dialog_departures_hint_text_size"/>

  <TextView
      android:id="@+id/route_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/stop_text"
      android:gravity="center_horizontal"
      android:textSize="@dimen/dialog_departures_hint_text_size"/>

  <ListView
      android:id="@+id/list_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/route_text"/>

  <FrameLayout
      android:id="@+id/empty_departures_view"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_below="@id/route_text"
      android:visibility="invisible">

    <TextView
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/empty_departures_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="60dp"
        android:text="@string/empty_routes_retry"
        android:textSize="18sp"/>

    <ImageButton
        android:id="@+id/refresh_departures_button"
        style="?android:borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/refresh_departures_button_content_desc"
        android:src="@android:drawable/ic_popup_sync"/>

  </FrameLayout>

  <include
      android:id="@+id/departure_loading_view"
      layout="@layout/loading_icon"
      android:layout_width="match_parent"
      android:layout_height="150dp"
      android:layout_below="@id/route_text"
      android:visibility="invisible"/>

</RelativeLayout>